feat : update render text

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     <a href="">
                         <img src="images/location-white.png" alt="">
                         <span>
-                Passages of Lorem Ipsum available
+                Update address here
               </span>
                     </a>
                 </div>
@@ -386,7 +386,7 @@
                     <a href="">
                         <img src="images/telephone-white.png" alt="">
                         <span>
-                Call : +012334567890
+                Call : +91-8989548633
               </span>
                     </a>
                 </div>
@@ -394,7 +394,7 @@
                     <a href="">
                         <img src="images/envelope-white.png" alt="">
                         <span>
-                demo@gmail.com
+                ssomaniassociates@gmail.com
               </span>
                     </a>
                 </div>
@@ -448,8 +448,8 @@
         <div class="row">
             <div class="col-lg-7 col-md-9 mx-auto">
                 <p>
-                    &copy; 2019 All Rights Reserved By
-                    <a href="https://html.design/">Free Html Templates</a>
+                    &copy; 2023 All Rights Reserved By
+                    <a href="https://somaniassociates.in/">Somani Associates</a>
                 </p>
             </div>
         </div>
