feat : update lookup

--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <div class="img-box">
-                                            <img src="images/slider-img.jpg" alt="">
+                                            <img src="images/somani_associates.png" alt="">
                                         </div>
                                     </div>
                                     <div class="carousel-item">
                                         <div class="img-box">
-                                            <img src="images/slider-img.jpg" alt="">
+                                            <img src="images/somani_associates.png" alt="">
                                         </div>
                                     </div>
                                     <div class="carousel-item">
                                         <div class="img-box">
-                                            <img src="images/slider-img.jpg" alt="">
+                                            <img src="images/somani_associates.png" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -152,7 +152,7 @@
         <div class="service_container">
             <div class="box">
                 <div class="img-box">
-                    <img src="images/s1.png" class="img1" alt="">
+                    <img src="images/rupee.png" class="img1" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -191,7 +191,7 @@
             </div>
             <div class="box ">
                 <div class="img-box">
-                    <img src="images/s4.png" class="img1" alt="">
+                    <img src="images/s1.png" class="img1" alt="">
                 </div>
                 <div class="detail-box">
                     <h5>
@@ -252,10 +252,10 @@
             <div class="col-md-6">
                 <div class="img_container">
                     <div class="img-box b1">
-                        <img src="images/about-img1.jpg" alt=""/>
+                        <img src="images/somani_associates.png" alt="somani_associates" />
                     </div>
                     <div class="img-box b2">
-                        <img src="images/about-img2.jpg" alt=""/>
+                        <img src="images/somani_associates_consultant.png" alt="somani_associates_consultant" />
                     </div>
                 </div>
 
@@ -355,9 +355,7 @@
             <div class="col-md-6">
                 <div class="map_container">
                     <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
-                                width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%"
-                                allowfullscreen></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3680.0401212775187!2d75.87850457609163!3d22.72675007938219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962fd40964c04f3%3A0x87c3edabdbe9b5fe!2sJanjeerwala%20Square%2C%20Near%20Janjeerwala%20Square%2C%20Indore%2C%20Madhya%20Pradesh%20452001!5e0!3m2!1sen!2sin!4v1692794358105!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
