--- a/about.html
+++ b/about.html
@@ -103,10 +103,10 @@
         <div class="col-md-6">
           <div class="img_container">
             <div class="img-box b1">
-              <img src="images/about-img1.jpg" alt="" />
+              <img src="images/somani_associates.png" alt="somani_associates" />
             </div>
             <div class="img-box b2">
-              <img src="images/about-img2.jpg" alt="" />
+              <img src="images/somani_associates_consultant.png" alt="somani_associates_consultant" />
             </div>
           </div>
 
