--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="service.html"> Service </a>
                             </li>
-                            <li class="nav-item">
+<!--                            <li class="nav-item">
                                 <a class="nav-link" href="blog.html"> Blog </a>
-                            </li>
+                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact Us</a>
                             </li>
@@ -238,15 +238,9 @@
                         <img src="images/plug.png" alt="">
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                        in reprehenderit in voluptate velit
+                        Somani Associates We provide bookkeeping services, tax planning, new business advisory, and much more. Whether your business is new or established,
+                        small or mid-sized, you’ll always receive the personal support and exceptional service our firm has come to be known for by local business owners.
                     </p>
-                    <a href="">
-                        Read More
-                    </a>
                 </div>
             </div>
             <div class="col-md-6">
@@ -270,6 +264,7 @@
 
 <!-- blog section -->
 
+<!--
 <section class="blog_section layout_padding">
     <div class="container">
         <div class="heading_container">
@@ -314,6 +309,7 @@
         </div>
     </div>
 </section>
+-->
 
 <!-- end blog section -->
 
