--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
                     <a href="">
                         <img src="images/location-white.png" alt="">
                         <span>
-                Passages of Lorem Ipsum available
+                Update address here
               </span>
                     </a>
                 </div>
@@ -135,7 +135,7 @@
                     <a href="">
                         <img src="images/telephone-white.png" alt="">
                         <span>
-                Call : +012334567890
+                Call : +91-8989548633
               </span>
                     </a>
                 </div>
@@ -143,7 +143,7 @@
                     <a href="">
                         <img src="images/envelope-white.png" alt="">
                         <span>
-                demo@gmail.com
+                ssomaniassociates@gmail.com
               </span>
                     </a>
                 </div>
