refactor : contact details on all page

--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
             <div class="col-lg-7 col-md-9 mx-auto">
                 <p>
                     &copy; 2019 All Rights Reserved By
-                    <a href="https://html.design/">Free Html Templates</a>
+                    <a href="https://somaniassociates.in/">somaniassociates.in</a>
                 </p>
             </div>
         </div>
