--- a/service.html
+++ b/service.html
@@ -172,7 +172,7 @@
             <a href="">
               <img src="images/location-white.png" alt="">
               <span>
-                Passages of Lorem Ipsum available
+Update address here
               </span>
             </a>
           </div>
@@ -180,7 +180,7 @@
             <a href="">
               <img src="images/telephone-white.png" alt="">
               <span>
-                Call : +012334567890
+                Call : +91-8989548633
               </span>
             </a>
           </div>
