--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Electrochip</title>
+  <title>Somani Associates</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -38,7 +38,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="">
             <span>
-              Electrochip
+              Somani Associates
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,7 +133,7 @@
             <a href="">
               <img src="images/location-white.png" alt="">
               <span>
-                Passages of Lorem Ipsum available
+Update address here
               </span>
             </a>
           </div>
@@ -141,7 +141,7 @@
             <a href="">
               <img src="images/telephone-white.png" alt="">
               <span>
-                Call : +012334567890
+                Call : +91-8989548633
               </span>
             </a>
           </div>
@@ -149,7 +149,7 @@
             <a href="">
               <img src="images/envelope-white.png" alt="">
               <span>
-                demo@gmail.com
+                ssomaniassociates@gmail.com
               </span>
             </a>
           </div>
@@ -204,7 +204,7 @@
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
             &copy; 2019 All Rights Reserved By
-            <a href="https://html.design/">Free Html Templates</a>
+            <a href="https://somaniassociates.in/">somaniassociates.in</a>
           </p>
         </div>
       </div>
