--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
 
-    <title>Electrochip</title>
+    <title>Somani Associates</title>
 
     <!-- slider stylesheet -->
     <link rel="stylesheet" type="text/css"
@@ -39,7 +39,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" alt="">
                     <span>
-              Electrochip
+              Somani Associates
             </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -61,9 +61,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="service.html"> Service </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="blog.html"> Blog </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contact </a>
