--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Electrochip</title>
+  <title>Somani Associates</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -60,7 +60,7 @@
                   <a class="nav-link" href="service.html"> Service </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="blog.html"> Blog </a>
+                  <!--comment blog-->
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact </a>
