--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="service.html"> Service </a>
                 </li>
+<!--
                 <li class="nav-item">
-                  <a class="nav-link" href="blog.html"> Blog </a>
+                  &lt;!&ndash;comment blog&ndash;&gt;
                 </li>
+-->
                 <li class="nav-item active">
                   <a class="nav-link" href="contact.html">Contact </a>
                 </li>
