--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                 </div>
                 <div class="detail-box">
                     <h5>
-                        Income Tax and Planning
+                        Tax Planning
                     </h5>
                     <p>
-                        We've helped 16+ clients strategically plan their investment and file IT returns.
+                        Minimize your tax burdens legally with strategic tax planning that aligns with Indian financial regulations.
                     </p>
                 </div>
             </div>
@@ -169,10 +169,10 @@
                 </div>
                 <div class="detail-box">
                     <h5>
-                        GST Compilance & Registration
+                        ITR Filing
                     </h5>
                     <p>
-                        Hassel free gst filing process
+                        Seamlessly file your Income Tax Return (ITR) with expert guidance to ensure compliance and optimize your financial outcomes.
                     </p>
                 </div>
             </div>
@@ -182,10 +182,10 @@
                 </div>
                 <div class="detail-box">
                     <h5>
-                        Accounting and Finalisation
+                        GST Registration
                     </h5>
                     <p>
-                        Helping clients maintain their balance sheet
+                        Streamline your business by getting your Goods and Services Tax (GST) registration in place, a crucial step for operating in the Indian market.
                     </p>
                 </div>
             </div>
@@ -195,10 +195,10 @@
                 </div>
                 <div class="detail-box">
                     <h5>
-                        Insurance and Investment
+                        GST Compliance
                     </h5>
                     <p>
-                        Select the right insurance for you depending on the personal/business needs
+                        Navigate the complexities of Goods and Services Tax (GST) with professional assistance to ensure accurate compliance and reporting.
                     </p>
                 </div>
             </div>
@@ -208,10 +208,36 @@
                 </div>
                 <div class="detail-box">
                     <h5>
-                        Loans (Home Loan, Business Loan, CC/OD, LAP)
+                        Gumasta (Indore Nagar Nigam)
                     </h5>
                     <p>
-                        Business loan filing and Home loan eligibility
+                        Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img-box">
+                    <img src="images/s5.png" class="img1" alt="">
+                </div>
+                <div class="detail-box">
+                    <h5>
+                        Gumasta (Indore Nagar Nigam)
+                    </h5>
+                    <p>
+                        Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
+                    </p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="img-box">
+                    <img src="images/s5.png" class="img1" alt="">
+                </div>
+                <div class="detail-box">
+                    <h5>
+                        Gumasta (Indore Nagar Nigam)
+                    </h5>
+                    <p>
+                        Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
                     </p>
                 </div>
             </div>
