--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Electrochip</title>
+  <title>Somani Associates</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -38,7 +38,7 @@
           <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="">
             <span>
-              Electrochip
+              Somani Associates
             </span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,9 +59,11 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="service.html"> Service </a>
                 </li>
+<!--
                 <li class="nav-item">
-                  <a class="nav-link" href="blog.html"> Blog </a>
+                  &lt;!&ndash;comment blog&ndash;&gt;
                 </li>
+-->
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact </a>
                 </li>
@@ -88,14 +90,14 @@
       <div class="service_container">
         <div class="box">
           <div class="img-box">
-            <img src="images/s1.png" class="img1" alt="">
+            <img src="images/rupee.png" class="img1" alt="">
           </div>
           <div class="detail-box">
             <h5>
-              Equipment installation
+              Tax Planning
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              Minimize your tax burdens legally with strategic tax planning that aligns with Indian financial regulations.
             </p>
           </div>
         </div>
@@ -105,10 +107,10 @@
           </div>
           <div class="detail-box">
             <h5>
-              Windmill Energy
+              ITR Filing
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              Seamlessly file your Income Tax Return (ITR) with expert guidance to ensure compliance and optimize your financial outcomes.
             </p>
           </div>
         </div>
@@ -118,23 +120,23 @@
           </div>
           <div class="detail-box">
             <h5>
-              Equipment Maintenance
+              GST Registration
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              Streamline your business by getting your Goods and Services Tax (GST) registration in place, a crucial step for operating in the Indian market.
             </p>
           </div>
         </div>
         <div class="box ">
           <div class="img-box">
-            <img src="images/s4.png" class="img1" alt="">
+            <img src="images/s1.png" class="img1" alt="">
           </div>
           <div class="detail-box">
             <h5>
-              Offshore Engineering
+              GST Compliance
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              Navigate the complexities of Goods and Services Tax (GST) with professional assistance to ensure accurate compliance and reporting.
             </p>
           </div>
         </div>
@@ -144,10 +146,36 @@
           </div>
           <div class="detail-box">
             <h5>
-              Electrical Wiring
+              Gumasta (Indore Nagar Nigam)
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/s5.png" class="img1" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              Gumasta (Indore Nagar Nigam)
+            </h5>
+            <p>
+              Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="images/s5.png" class="img1" alt="">
+          </div>
+          <div class="detail-box">
+            <h5>
+              Gumasta (Indore Nagar Nigam)
+            </h5>
+            <p>
+              Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
             </p>
           </div>
         </div>
