--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                 </div>
                 <div class="detail-box">
                     <h5>
-                        Gumasta (Indore Nagar Nigam)
+                        Loans
                     </h5>
                     <p>
-                        Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
+                        Fulfill your financial aspirations with tailored loan solutions and advice, assisting you in making informed borrowing decisions.
                     </p>
                 </div>
             </div>
@@ -234,10 +234,10 @@
                 </div>
                 <div class="detail-box">
                     <h5>
-                        Gumasta (Indore Nagar Nigam)
+                        Insurance and Investment
                     </h5>
                     <p>
-                        Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
+                        Safeguard your future and assets with the right insurance coverage, tailored to your needs and ensuring financial security for you and your loved ones.
                     </p>
                 </div>
             </div>
