--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- fonts style -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet"/>
     <!-- responsive style -->
@@ -30,7 +31,9 @@
 </head>
 
 <body>
-
+<a href="https://api.whatsapp.com/send?phone=+918989548633&text=Hi" class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+</a>
 <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -140,115 +143,115 @@
 
 
 <!-- service section -->
-<section class="service_section layout_padding">
-    <div class="container">
-        <div class="heading_container">
-            <h2>
-                Our Services
-            </h2>
-            <img src="images/plug.png" alt="">
-        </div>
+    <section class="service_section layout_padding">
+        <div class="container">
+            <div class="heading_container">
+                <h2>
+                    Our Services
+                </h2>
+                <img src="images/plug.png" alt="">
+            </div>
 
-        <div class="service_container">
-            <div class="box">
-                <div class="img-box">
-                    <img src="images/rupee.png" class="img1" alt="">
+            <div class="service_container">
+                <div class="box">
+                    <div class="img-box">
+                        <img src="images/rupee.png" class="img1" alt="">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            Tax Planning
+                        </h5>
+                        <p>
+                            Minimize your tax burdens legally with strategic tax planning that aligns with Indian financial regulations.
+                        </p>
+                    </div>
                 </div>
-                <div class="detail-box">
-                    <h5>
-                        Tax Planning
-                    </h5>
-                    <p>
-                        Minimize your tax burdens legally with strategic tax planning that aligns with Indian financial regulations.
-                    </p>
+                <div class="box active">
+                    <div class="img-box">
+                        <img src="images/s2.png" class="img1" alt="">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            ITR Filing
+                        </h5>
+                        <p>
+                            Seamlessly file your Income Tax Return (ITR) with expert guidance to ensure compliance and optimize your financial outcomes.
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="img-box">
+                        <img src="images/s3.png" class="img1" alt="">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            GST Registration
+                        </h5>
+                        <p>
+                            Streamline your business by getting your Goods and Services Tax (GST) registration in place, a crucial step for operating in the Indian market.
+                        </p>
+                    </div>
+                </div>
+                <div class="box ">
+                    <div class="img-box">
+                        <img src="images/s1.png" class="img1" alt="">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            GST Compliance
+                        </h5>
+                        <p>
+                            Navigate the complexities of Goods and Services Tax (GST) with professional assistance to ensure accurate compliance and reporting.
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="img-box">
+                        <img src="images/s5.png" class="img1" alt="">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            Gumasta (Indore Nagar Nigam)
+                        </h5>
+                        <p>
+                            Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="img-box">
+                        <img src="images/s5.png" class="img1" alt="">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            Loans
+                        </h5>
+                        <p>
+                            Fulfill your financial aspirations with tailored loan solutions and advice, assisting you in making informed borrowing decisions.
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="img-box">
+                        <img src="images/s5.png" class="img1" alt="">
+                    </div>
+                    <div class="detail-box">
+                        <h5>
+                            Insurance and Investment
+                        </h5>
+                        <p>
+                            Safeguard your future and assets with the right insurance coverage, tailored to your needs and ensuring financial security for you and your loved ones.
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="box active">
-                <div class="img-box">
-                    <img src="images/s2.png" class="img1" alt="">
-                </div>
-                <div class="detail-box">
-                    <h5>
-                        ITR Filing
-                    </h5>
-                    <p>
-                        Seamlessly file your Income Tax Return (ITR) with expert guidance to ensure compliance and optimize your financial outcomes.
-                    </p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="img-box">
-                    <img src="images/s3.png" class="img1" alt="">
-                </div>
-                <div class="detail-box">
-                    <h5>
-                        GST Registration
-                    </h5>
-                    <p>
-                        Streamline your business by getting your Goods and Services Tax (GST) registration in place, a crucial step for operating in the Indian market.
-                    </p>
-                </div>
-            </div>
-            <div class="box ">
-                <div class="img-box">
-                    <img src="images/s1.png" class="img1" alt="">
-                </div>
-                <div class="detail-box">
-                    <h5>
-                        GST Compliance
-                    </h5>
-                    <p>
-                        Navigate the complexities of Goods and Services Tax (GST) with professional assistance to ensure accurate compliance and reporting.
-                    </p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="img-box">
-                    <img src="images/s5.png" class="img1" alt="">
-                </div>
-                <div class="detail-box">
-                    <h5>
-                        Gumasta (Indore Nagar Nigam)
-                    </h5>
-                    <p>
-                        Stay on the right side of regulations by obtaining your Gumasta license for smooth business operations in Indore, (Madhya Pradesh) requiring it.
-                    </p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="img-box">
-                    <img src="images/s5.png" class="img1" alt="">
-                </div>
-                <div class="detail-box">
-                    <h5>
-                        Loans
-                    </h5>
-                    <p>
-                        Fulfill your financial aspirations with tailored loan solutions and advice, assisting you in making informed borrowing decisions.
-                    </p>
-                </div>
-            </div>
-            <div class="box">
-                <div class="img-box">
-                    <img src="images/s5.png" class="img1" alt="">
-                </div>
-                <div class="detail-box">
-                    <h5>
-                        Insurance and Investment
-                    </h5>
-                    <p>
-                        Safeguard your future and assets with the right insurance coverage, tailored to your needs and ensuring financial security for you and your loved ones.
-                    </p>
-                </div>
+            <div class="btn-box">
+                <a href="">
+                    Read More
+                </a>
             </div>
         </div>
-        <div class="btn-box">
-            <a href="">
-                Read More
-            </a>
-        </div>
-    </div>
-</section>
+    </section>
 <!-- end service section -->
 
 <!-- about section -->
