--- a/service.html
+++ b/service.html
@@ -29,7 +29,9 @@
 </head>
 
 <body class="sub_page">
-
+<a href="https://api.whatsapp.com/send?phone=+918989548633&text=Hi" class="float" target="_blank">
+  <i class="fa fa-whatsapp my-float"></i>
+</a>
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
