feat : update address and remove about us orange logo

--- a/about.html
+++ b/about.html
@@ -103,9 +103,6 @@
                     <div class="img-box b1">
                         <img src="images/somani_associates.png" alt="somani_associates"/>
                     </div>
-                    <div class="img-box b2">
-                        <img src="images/somani_associates_consultant.png" alt="somani_associates_consultant"/>
-                    </div>
                 </div>
 
             </div>
@@ -126,7 +123,11 @@
                     <a href="">
                         <img src="images/location-white.png" alt="">
                         <span>
-                Update address here
+                309, 3rd Floor, Bansiwala Tower,
+(Above Morni Sarees),
+Agresen Square,
+Sapna Saneegta Road,
+Indore, M.P.
               </span>
                     </a>
                 </div>
