--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,11 @@
             <a href="">
               <img src="images/location-white.png" alt="">
               <span>
-Update address here
+309, 3rd Floor, Bansiwala Tower,
+(Above Morni Sarees),
+Agresen Square,
+Sapna Saneegta Road,
+Indore, M.P.
               </span>
             </a>
           </div>
