--- a/index.html
+++ b/index.html
@@ -277,9 +277,6 @@
                     <div class="img-box b1">
                         <img src="images/somani_associates.png" alt="somani_associates" />
                     </div>
-                    <div class="img-box b2">
-                        <img src="images/somani_associates_consultant.png" alt="somani_associates_consultant" />
-                    </div>
                 </div>
 
             </div>
@@ -401,7 +398,11 @@
                     <a href="">
                         <img src="images/location-white.png" alt="">
                         <span>
-                Update address here
+                309, 3rd Floor, Bansiwala Tower,
+(Above Morni Sarees),
+Agresen Square,
+Sapna Saneegta Road,
+Indore, M.P.
               </span>
                     </a>
                 </div>
