--- a/contact.html
+++ b/contact.html
@@ -2,228 +2,233 @@
 <html>
 
 <head>
-  <!-- Basic -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+    <!-- Basic -->
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <!-- Site Metas -->
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
 
-  <title>Somani Associates</title>
+    <title>Somani Associates</title>
 
-  <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    <!-- slider stylesheet -->
+    <link rel="stylesheet" type="text/css"
+          href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css"/>
 
-  <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
+    <!-- bootstrap core css -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- fonts style -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet">
 
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet"/>
+    <!-- responsive style -->
+    <link href="css/responsive.css" rel="stylesheet"/>
 </head>
 
 <body class="sub_page">
 <a href="https://api.whatsapp.com/send?phone=+918989548633&text=Hi" class="float" target="_blank">
-  <i class="fa fa-whatsapp my-float"></i>
+    <i class="fa fa-whatsapp my-float"></i>
 </a>
-  <div class="hero_area">
+<div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
-            <span>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg custom_nav-container ">
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/logo.png" alt="">
+                    <span>
               Somani Associates
             </span>
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="s-1"> </span>
-            <span class="s-2"> </span>
-            <span class="s-3"> </span>
-          </button>
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="s-1"> </span>
+                    <span class="s-2"> </span>
+                    <span class="s-3"> </span>
+                </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
-              <ul class="navbar-nav  ">
-                <li class="nav-item ">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="service.html"> Service </a>
-                </li>
-<!--
-                <li class="nav-item">
-                  &lt;!&ndash;comment blog&ndash;&gt;
-                </li>
--->
-                <li class="nav-item active">
-                  <a class="nav-link" href="contact.html">Contact </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+                        <ul class="navbar-nav  ">
+                            <li class="nav-item ">
+                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html"> About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="service.html"> Service </a>
+                            </li>
+                            <!--
+                                            <li class="nav-item">
+                                              &lt;!&ndash;comment blog&ndash;&gt;
+                                            </li>
+                            -->
+                            <li class="nav-item active">
+                                <a class="nav-link" href="contact.html">Contact </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <!-- end header section -->
-  </div>
+</div>
 
 
-  <!-- contact section -->
+<!-- contact section -->
 
-  <section class="contact_section layout_padding">
+<section class="contact_section layout_padding">
     <div class="container ">
-      <div class="heading_container">
-        <h2>
-          Contact Us
-        </h2>
-        <img src="images/plug.png" alt="">
-      </div>
+        <div class="heading_container">
+            <h2>
+                Contact Us
+            </h2>
+            <img src="images/plug.png" alt="">
+        </div>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <form action="">
-            <div>
-              <input type="text" placeholder="Name" />
-            </div>
-            <div>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div>
-              <input type="text" placeholder="Phone Number" />
-            </div>
-            <div>
-              <input type="text" class="message-box" placeholder="Message" />
-            </div>
-            <div class="d-flex ">
-              <button>
-                SEND
-              </button>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-6">
-          <div class="map_container">
-            <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end contact section -->
-
-
-  <!-- info section -->
-
-  <section class="info_section layout_padding">
-    <div class="container">
-      <div class="info_contact">
         <div class="row">
-          <div class="col-md-4">
-            <a href="">
-              <img src="images/location-white.png" alt="">
-              <span>
+            <div class="col-md-6">
+                <form action="">
+                    <div>
+                        <input type="text" placeholder="Name"/>
+                    </div>
+                    <div>
+                        <input type="email" placeholder="Email"/>
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Phone Number"/>
+                    </div>
+                    <div>
+                        <input type="text" class="message-box" placeholder="Message"/>
+                    </div>
+                    <div class="d-flex ">
+                        <button>
+                            SEND
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-6">
+                <div class="map_container">
+                    <div class="map-responsive">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3680.0401212775187!2d75.87850457609163!3d22.72675007938219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962fd40964c04f3%3A0x87c3edabdbe9b5fe!2sJanjeerwala%20Square%2C%20Near%20Janjeerwala%20Square%2C%20Indore%2C%20Madhya%20Pradesh%20452001!5e0!3m2!1sen!2sin!4v1692794358105!5m2!1sen!2sin"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- end contact section -->
+
+
+<!-- info section -->
+
+<section class="info_section layout_padding">
+    <div class="container">
+        <div class="info_contact">
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="">
+                        <img src="images/location-white.png" alt="">
+                        <span>
 309, 3rd Floor, Bansiwala Tower,
 (Above Morni Sarees),
 Agresen Square,
 Sapna Saneegta Road,
 Indore, M.P.
               </span>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a href="">
-              <img src="images/telephone-white.png" alt="">
-              <span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="">
+                        <img src="images/telephone-white.png" alt="">
+                        <span>
                 Call : +91-8989548633
               </span>
-            </a>
-          </div>
-          <div class="col-md-4">
-            <a href="">
-              <img src="images/envelope-white.png" alt="">
-              <span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="">
+                        <img src="images/envelope-white.png" alt="">
+                        <span>
                 ssomaniassociates@gmail.com
               </span>
-            </a>
-          </div>
+                    </a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-lg-9">
-          <div class="info_form">
-            <form action="">
-              <input type="text" placeholder="Enter your email">
-              <button>
-                subscribe
-              </button>
-            </form>
-          </div>
+        <div class="row">
+            <div class="col-md-8 col-lg-9">
+                <div class="info_form">
+                    <form action="">
+                        <input type="text" placeholder="Enter your email">
+                        <button>
+                            subscribe
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-4 col-lg-3">
+                <div class="info_social">
+                    <div>
+                        <a href="">
+                            <img src="images/fb.png" alt="">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="">
+                            <img src="images/twitter.png" alt="">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="">
+                            <img src="images/linkedin.png" alt="">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="">
+                            <img src="images/instagram.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4 col-lg-3">
-          <div class="info_social">
-            <div>
-              <a href="">
-                <img src="images/fb.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/twitter.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/linkedin.png" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="images/instagram.png" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
 
     </div>
-  </section>
+</section>
 
-  <!-- end info section -->
+<!-- end info section -->
 
-  <!-- footer section -->
-  <footer class="container-fluid footer_section">
+<!-- footer section -->
+<footer class="container-fluid footer_section">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-7 col-md-9 mx-auto">
-          <p>
-            &copy; 2019 All Rights Reserved By
-            <a href="https://somaniassociates.in/">somaniassociates.in</a>
-          </p>
+        <div class="row">
+            <div class="col-lg-7 col-md-9 mx-auto">
+                <p>
+                    &copy; 2019 All Rights Reserved By
+                    <a href="https://somaniassociates.in/">somaniassociates.in</a>
+                </p>
+            </div>
         </div>
-      </div>
     </div>
-  </footer>
-  <!-- footer section -->
+</footer>
+<!-- footer section -->
 
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/bootstrap.js"></script>
 
 </body>
 
