feat : update footer section

--- a/blog.html
+++ b/blog.html
@@ -214,7 +214,7 @@ Indore, M.P.
       <div class="row">
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
-            &copy; 2019 All Rights Reserved By
+            &copy; 2023 All Rights Reserved
             <a href="https://html.design/">Free Html Templates</a>
           </p>
         </div>
