--- a/service.html
+++ b/service.html
@@ -271,8 +271,8 @@ Indore, M.P.
       <div class="row">
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
-            &copy; 2019 All Rights Reserved By
-            <a href="https://html.design/">Free Html Templates</a>
+            &copy; 2023 All Rights Reserved. Developed and Maintained by
+            <a href="https://www.linkedin.com/in/pradhan-rishi-sharma10/">Pradhan Rishi Sharma</a>
           </p>
         </div>
       </div>
