--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <a class="nav-link" href="about.html"> About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="service.html"> Service </a>
+                                <a class="nav-link" href="service.html"> Services </a>
                             </li>
 <!--                            <li class="nav-item">
                                 <a class="nav-link" href="blog.html"> Blog </a>
