--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@ Indore, M.P.
         <div class="row">
             <div class="col-lg-7 col-md-9 mx-auto">
                 <p>
-                    &copy; 2023 All Rights Reserved By
-                    <a href="https://somaniassociates.in/">Somani Associates</a>
+                    &copy; 2023 All Rights Reserved
+                    <a href="https://www.linkedin.com/in/pradhan-rishi-sharma10/">Pradhan Rishi Sharma</a>
                 </p>
             </div>
         </div>
