feat : add form id and label

--- a/index.html
+++ b/index.html
@@ -300,16 +300,16 @@
             <div class="col-md-6">
                 <form action="">
                     <div>
-                        <input type="text" placeholder="Name"/>
+                        <input id="name" type="text" placeholder="Name"/> <label for="name">Enter your name:</label>
                     </div>
                     <div>
-                        <input type="email" placeholder="Email"/>
+                        <input id="email" type="text" placeholder="Email"/> <label for="email">Enter email id</label>
                     </div>
                     <div>
-                        <input type="text" placeholder="Phone Number"/>
+                        <input id="phone" type="text" placeholder="Phone Number"/> <label for="phone">Enter phone number</label>
                     </div>
                     <div>
-                        <input type="text" class="message-box" placeholder="Message"/>
+                        <input id="message" type="text" placeholder="Message"/> <label for="message">Please enter your message</label>
                     </div>
                     <div class="d-flex ">
                         <button>
